Fix CV file name bug

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <p>Email: lamtingwaiivan@gmail.com</p> <!-- Add more profile details as needed -->
         <div class="buttons">
             <a href="https://www.linkedin.com/in/ting-wai-lam-458298311/" class="button">LinkedIn Profile</a>
-            <a href="Lam_Ting_Wai_CV.pdf" class="button cv">Download CV</a>
+            <a href="Lam_Ting_Wai_Ivan_CV.pdf" class="button cv">Download CV</a>
         </div>
     </div>
 </body>
