--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         <h1>Lam Ting Wai, Ivan</h1>
         <p>University: The Chinese University of Hong Kong</p>
         <p>Major: Computer Science</p>
-        <p>Email: lamtingwaiivan@gmail.com</p> <!-- Add more profile details as needed -->
+        <p>Email: <a href="mailto:lamtingwaiivan@gmail.com" class="email-link">lamtingwaiivan@gmail.com</a></p>
+        <p>Sch. email: <a href="mailto:1155212391@link.cuhk.edu.hk" class="email-link">1155212391@link.cuhk.edu.hk</a></p>
         <div class="buttons">
             <a href="https://www.linkedin.com/in/ting-wai-lam-458298311/" class="button">LinkedIn Profile</a>
             <a href="./Lam_Ting_Wai_Ivan_CV.pdf" class="button cv">Download CV</a>
